--- a/ui.apps/src/main/content/jcr_root/apps/searchutility/components/searchUtility/searchUtility.html
+++ b/ui.apps/src/main/content/jcr_root/apps/searchutility/components/searchUtility/searchUtility.html
@@ -15,35 +15,35 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr data-sly-test.activeAsset="${properties.activeAsset} ">
+			<tr data-sly-set.activeAsset="${properties.activeAsset} ">
 
 				<td> <b>Asset Name:</b> </td>
 				<td id="assetName">${properties.assetName}</td>
 		<td> <b>Asset Search Path:</b> </td>
 		<td id="assetPath">${properties.assetPath}</td>
 			</tr>
-			<tr data-sly-test.activeComp=" ${properties.activeComp} ">
+			<tr data-sly-set.activeComp=" ${properties.activeComp} ">
 
 				<td> <b>Component Name:</b> </td>
 				<td id="compName">${properties.compName}</td>
 		<td> <b>Component Search Path:</b> </td>
 		<td id="compPath">${properties.compPath}</td>
 		</tr>
-		<tr data-sly-test.activeSearchString=" ${properties.activeSearchString} ">
+		<tr data-sly-set.activeSearchString=" ${properties.activeSearchString} ">
 
 			<td> <b>Search String:</b> </td>
 			<td id="searchString">${properties.searchString}</td>
 			<td> <b>String Search Path:</b> </td>
 			<td id="rootPath">${properties.rootPath}</td>
 		</tr>
-		<tr data-sly-test.activeSearchUrl="${properties.activeSearchUrl} ">
+		<tr data-sly-set.activeSearchUrl="${properties.activeSearchUrl} ">
 
 			<td> <b>URL to search:</b> </td>
 			<td id="urlPattern">${properties.urlPattern}</td>
 			<td> <b>Search URL:</b> </td>
 			<td id="searchPath">${properties.searchPath}</td>
 		</tr>
-		<tr data-sly-test.activeProperty="${properties.activeProperty} ">
+		<tr data-sly-set.activeProperty="${properties.activeProperty} ">
 
 			<td> <b>Property Details:</b> </td>
 			<td> <b>Property Name:</b> <b id="propertyName">${properties.propertyName}</b>
