--- a/ui.apps/src/main/content/jcr_root/apps/searchutility/components/searchUtility/searchUtility.html
+++ b/ui.apps/src/main/content/jcr_root/apps/searchutility/components/searchUtility/searchUtility.html
@@ -15,35 +15,35 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr data-sly-set.activeAsset="${properties.activeAsset} ">
+		<tr data-sly-test="${properties.activeAsset} === 'true' " >
 
-				<td> <b>Asset Name:</b> </td>
-				<td id="assetName">${properties.assetName}</td>
+			<td> <b>Asset Name:</b> </td>
+			<td id="assetName">${properties.assetName}</td>
 		<td> <b>Asset Search Path:</b> </td>
 		<td id="assetPath">${properties.assetPath}</td>
-			</tr>
-			<tr data-sly-set.activeComp=" ${properties.activeComp} ">
+		</tr>
+		<tr data-sly-test=" ${properties.activeComp} === 'true'">
 
-				<td> <b>Component Name:</b> </td>
-				<td id="compName">${properties.compName}</td>
+			<td> <b>Component Name:</b> </td>
+			<td id="compName">${properties.compName}</td>
 		<td> <b>Component Search Path:</b> </td>
 		<td id="compPath">${properties.compPath}</td>
 		</tr>
-		<tr data-sly-set.activeSearchString=" ${properties.activeSearchString} ">
+		<tr data-sly-test=" ${properties.activeSearchString}=== 'true' ">
 
 			<td> <b>Search String:</b> </td>
 			<td id="searchString">${properties.searchString}</td>
 			<td> <b>String Search Path:</b> </td>
 			<td id="rootPath">${properties.rootPath}</td>
 		</tr>
-		<tr data-sly-set.activeSearchUrl="${properties.activeSearchUrl} ">
+		<tr data-sly-test="${properties.activeSearchUrl}=== 'true' ">
 
 			<td> <b>URL to search:</b> </td>
 			<td id="urlPattern">${properties.urlPattern}</td>
 			<td> <b>Search URL:</b> </td>
 			<td id="searchPath">${properties.searchPath}</td>
 		</tr>
-		<tr data-sly-set.activeProperty="${properties.activeProperty} ">
+		<tr data-sly-test="${properties.activeProperty}=== 'true' ">
 
 			<td> <b>Property Details:</b> </td>
 			<td> <b>Property Name:</b> <b id="propertyName">${properties.propertyName}</b>
@@ -56,7 +56,7 @@
 		<button type="button">Search here</button>
 		<script>
 document.addEventListener('DOMContentLoaded', (e) => {
-    console.log(`Document is ready!`);
+     console.log('activeComp'+activeComp)
 
 			var properUrl="";
              var activeComp= false;
@@ -97,9 +97,10 @@ document.addEventListener('DOMContentLoaded', (e) => {
 
 
 			if(activeComp === "true") {
+			var compPath = "";
 				var compName = document.getElementById("compName").innerHTML;
-				var compPath = "";
-                if( !document.getElementById("compPath").innerHTML === ""){
+				
+                if( !(document.getElementById("compPath").innerHTML === "")){
 				compPath = document.getElementById("compPath").innerHTML;
                 }
 
@@ -109,7 +110,7 @@ document.addEventListener('DOMContentLoaded', (e) => {
             var assetPath="";
 				var assetName = document.getElementById("assetName").innerHTML;
 
-                 if( !document.getElementById("assetPath").innerHTML === ""){
+                 if( !(document.getElementById("assetPath").innerHTML === "")){
 				assetPath = document.getElementById("assetPath").innerHTML;
                 }
 				properUrl = properUrl + 'activeAsset=' + activeAsset + '&assetName=' + assetName + '&assetPath=' + assetPath + '&'
@@ -117,7 +118,7 @@ document.addEventListener('DOMContentLoaded', (e) => {
 			if(activeSearchString === "true") {
 				var searchString = document.getElementById("searchString").innerHTML;
 				var rootPath = "";
-                 if( !document.getElementById("rootPath").innerHTML === ""){
+                 if( !(document.getElementById("rootPath").innerHTML === "")){
 				rootPath = document.getElementById("rootPath").innerHTML;
                 }
 				properUrl = properUrl + 'activeSearchString=' + activeSearchString + '&searchString=' + searchString + '&rootPath=' + rootPath + '&'
@@ -125,7 +126,7 @@ document.addEventListener('DOMContentLoaded', (e) => {
 			if(activeSearchUrl === "true") {
 				var urlPattern = document.getElementById("urlPattern").innerHTML;
 				var searchPath = "";
-                 if( !document.getElementById("searchPath").innerHTML === ""){
+                 if( !(document.getElementById("searchPath").innerHTML === "")){
 				searchPath = document.getElementById("searchPath").innerHTML;
                 }
 				properUrl = properUrl + 'activeSearchUrl=' + activeSearchUrl + '&urlPattern=' + urlPattern + '&searchPath=' + searchPath + '&'
@@ -134,10 +135,10 @@ document.addEventListener('DOMContentLoaded', (e) => {
 				var propertyName = document.getElementById("propertyName").innerHTML;
 				var propertyValue = document.getElementById("propertyValue").innerHTML;
 				var propertySearchPath ="";
- if( !document.getElementById("propertySearchPath").innerHTML === ""){
+			if( !(document.getElementById("propertySearchPath").innerHTML === "")){
 				propertySearchPath = document.getElementById("propertySearchPath").innerHTML;
                 }
-				properUrl = properUrl + 'activeProperty=' + activeProperty + '&propertyName=' + propertyName + '&propertyValue=' + propertyValue + '&propertySearchPath=' + propertySearchPath
+				properUrl = properUrl + 'activeProperty=' + activeProperty + '&propertyName=' + propertyName + '&propertyValue=' + propertyValue + '&propertySearchPath=' + propertySearchPath 
 			}
 			var completeUrl = "/content/searchutility/servlets/searchTool?" + properUrl
 			$("button").click(function() {
